k8s/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: platform-api-ingressroute
  namespace: platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.esocs.org`)
      kind: Rule
      services:
        - name: platform-api-service
          port: 80
      middlewares:
        - name: platform-security-headers
        - name: platform-compress
        - name: platform-buffering
        - name: platform-ratelimit
  tls:
    secretName: platform-tls-cert
